# prospect

./: CMakeLists.txt
.github/workflows/: build-linux.yml  build-windows.yml
src/: misc.h  prospect-test.cpp  prospect.cpp  prospect.h  prospectConfig.cmake.in  soap.cpp  soap.h  xml.cpp  xml.h
